# nvc

./: .gitignore  Makefile.am  config.h.meson  configure.ac  meson.build
.github/workflows/: build-test.yml  pkg-msys2.yml  test-osvvm.yml
contrib/osvvm/: test-osvvm.tcl
lib/ieee/: meson.build
lib/std/: meson.build
src/: Makemodule.am  bounds.c  bytecode.cpp  bytecode.hpp  cgen.c  common.c  common.h  compiler.cpp  compiler.hpp  elab.c  elaborate.cpp  eval.c  interp.cpp  interp.hpp  lib.c  lower.c  meson.build  names.c  nvc.c  opt.h  parse.c  phase.h  printer.cpp  printer.hpp  sem.c  simp.c  symbols.txt  toplevel.cpp  toplevel.hpp  type.c  type.h  util.c  util.h  vcode.c  vcode.h
src/jit/: jit-core.c  jit-exits.c  jit-exits.h  jit-x86.c
src/rt/: model.c
src/util/: Makemodule.am  array.hpp  bitmask.cpp  bitmask.hpp  crashdump.cpp  crashdump.hpp  hash.hpp  printer.cpp  printer.hpp  stacktrace.cpp  stacktrace.hpp
src/vhpi/: vhpi_impl.c
test/: Makemodule.am  jit_perf.c  meson.build  run_regr.c  test_bitmask.cpp  test_bounds.c  test_bytecode.cpp  test_elab.c  test_elaborate.cpp  test_group.c  test_ident.c  test_interp.cpp  test_jit.c  test_lower.c  test_parse.c  test_printer.cpp  test_sem.c  test_simp.c  test_util.c  test_util.cpp  test_util.h  unit_test.c
test/bytecode/: functions.vhd
test/elab/: elab1.vhd  elab2.vhd
test/regress/: testlist.txt
