lib_src = files(
  'bytecode.cpp',
  'cgen.c',
  'common.c',
  'compiler.cpp',
  'dump.c',
  'elab.c',
  'elaborate.cpp',
  'eval.c',
  'fbuf.c',
  'group.c',
  'hash.c',
  'ident.c',
  'interp.cpp',
  'lib.c',
  'lower.c',
  'make.c',
  'nvc.c',
  'object.c',
  'parse.c',
  'rt/alloc.c',
  'rt/cover.c',
  'rt/fst.c',
  'rt/heap.c',
  'rt/heap.cpp',
  'rt/jit.c',
  'rt/lxt.c',
  'rt/lxt.c',
  'rt/netdb.c',
  'rt/pprint.c',
  'rt/rtkern.c',
  'rt/vcd.c',
  'rt/wave.c',
  'sem.c',
  'simp.c',
  'toplevel.cpp',
  'tree.c',
  'type.c',
  'util.c',
  'util/bitmask.cpp',
  'util/crashdump.cpp',
  'util/printer.cpp',
  'util/stacktrace.cpp',
  'vcode.c',
  'bounds.c',
)

driver_src = files('nvc.c')

lexer = custom_target('lexer',
                      input : 'lexer.l',
                      output : 'lex.yy.c',
                      command : [flex, '-o', '@OUTPUT@', '@INPUT@'])

src_inc = include_directories('.')
