test_src = files(
  'test_bounds.c',
  'test_elab.c',
  'test_group.c',
  'test_hash.c',
  'test_heap.c',
  'test_ident.c',
  'test_json.c',
  'test_lib.c',
  'test_lower.c',
  'test_parse.c',
  'test_sem.c',
  'test_simp.c',
  'test_util.c',
  'test_value.c',
  'unit_test.c',
)

run_regr_src = files(
  'run_regr.c'
)
